# min-cloud-agent

./: .gitignore  Makefile-decls.am  Makefile-initial-setup-accounts.am  Makefile-min-cloud-agent.am  Makefile-min-metadata-service.am  Makefile.am  README.md  autogen.sh  configure.ac  shellpull.sh
packaging/: min-metadata-service.spec.in
src/: initial-setup-accounts.c  initial-setup-accounts.service.in  libinit-setup.c  libinit-setup.h  min-cloud-agent.c  min-cloud-agent.service.in  min-metadata-service.c  min-metadata.service.in
